/* eslint-env jest */

import stripAnsi from 'next/dist/compiled/strip-ansi'
import { join } from 'path'
import {
  fetchViaHTTP,
  findPort,
  killApp,
  launchApp,
  nextBuild,
  renderViaHTTP,
  waitFor,
} from 'next-test-utils'

const EVAL_ERROR = `Dynamic Code Evaluation (e. g. 'eval', 'new Function') not allowed in Edge Runtime`
const DYNAMIC_CODE_ERROR = `Dynamic Code Evaluation (e. g. 'eval', 'new Function', 'WebAssembly.compile') not allowed in Edge Runtime`
const WASM_COMPILE_ERROR = `Dynamic WASM code generation (e. g. 'WebAssembly.compile') not allowed in Edge Runtime`
const WASM_INSTANTIATE_ERROR = `Dynamic WASM code generation ('WebAssembly.instantiate' with a buffer parameter) not allowed in Edge Runtime`

jest.setTimeout(1000 * 60 * 2)
const context: Record<string, any> = {
  appDir: join(__dirname, '../'),
}

const isTurbopack = process.env.IS_TURBOPACK_TEST

/**
 * Extract the warning message from output for snapshot testing.
 * Captures: warning header, user-level stack frames, and code frame.
 * Excludes internal Next.js frames (dist/, src/server/, etc.)
 */
function extractWarning(output: string, warningType: string): string {
  const stripped = stripAnsi(output)
  const startIndex = stripped.indexOf(warningType)
  if (startIndex === -1) return ''

  const fromWarning = stripped.slice(startIndex)
  const lines = fromWarning.split('\n')

  const result: string[] = []

  for (const line of lines) {
    // Skip internal frames
    const isInternalFrame =
      line.includes('at eval (dist/') ||
      line.includes('at eval (../') ||
      line.includes('src/server/') ||
      line.includes('node_modules/')

    // Stop at pointer line (end of code frame)
    if (/^\s+\|\s+\^/.test(line)) {
      result.push(line)
      break
    }

    if (!isInternalFrame) {
      result.push(line)
    }
  }

  return result.join('\n')
}

describe('Page using eval in development mode', () => {
  let output = ''

  beforeAll(async () => {
    context.appPort = await findPort()
    context.app = await launchApp(context.appDir, context.appPort, {
      onStdout(msg) {
        output += msg
      },
      onStderr(msg) {
        output += msg
      },
    })
  })

  beforeEach(() => (output = ''))
  afterAll(() => killApp(context.app))

  it('does not issue dynamic code evaluation warnings', async () => {
    const html = await renderViaHTTP(context.appPort, '/')
    expect(html).toMatch(/>.*?100.*?and.*?100.*?<\//)
    await waitFor(500)
    expect(output).not.toContain(EVAL_ERROR)
    expect(output).not.toContain(DYNAMIC_CODE_ERROR)
    expect(output).not.toContain(WASM_COMPILE_ERROR)
    expect(output).not.toContain(WASM_INSTANTIATE_ERROR)
  })
})

describe.each([
  {
    title: 'Middleware',
    computeRoute(useCase) {
      return `/${useCase}`
    },
    async extractValue(response) {
      return JSON.parse(response.headers.get('data')).value
    },
  },
  {
    title: 'Edge route',
    computeRoute(useCase) {
      return `/api/route?case=${useCase}`
    },
    async extractValue(response) {
      return (await response.json()).value
    },
  },
])(
  '$title usage of dynamic code evaluation',
  ({ extractValue, computeRoute, title }) => {
    ;(process.env.TURBOPACK_BUILD ? describe.skip : describe)(
      'development mode',
      () => {
        let output = ''

        beforeAll(async () => {
          context.appPort = await findPort()
          context.app = await launchApp(context.appDir, context.appPort, {
            onStdout(msg) {
              output += msg
            },
            onStderr(msg) {
              output += msg
            },
          })
        })

        beforeEach(() => (output = ''))
        afterAll(() => killApp(context.app))

        it('shows a warning when running code with eval', async () => {
          const res = await fetchViaHTTP(
            context.appPort,
            computeRoute('using-eval')
          )
          expect(await extractValue(res)).toEqual(100)
          await waitFor(500)
          expect(output).toContain(EVAL_ERROR)
          const warning = extractWarning(output, 'DynamicCodeEvaluationWarning')
          expect(warning).toMatchSnapshot(
            `eval-${title}-${isTurbopack ? 'turbopack' : 'webpack'}`
          )
        })

        it('does not show warning when no code uses eval', async () => {
          const res = await fetchViaHTTP(
            context.appPort,
            computeRoute('not-using-eval')
          )
          expect(await extractValue(res)).toEqual(100)
          await waitFor(500)
          expect(output).not.toContain('Dynamic Code Evaluation')
        })

        it('shows a warning when running WebAssembly.compile', async () => {
          const res = await fetchViaHTTP(
            context.appPort,
            computeRoute('using-webassembly-compile')
          )
          expect(await extractValue(res)).toEqual(81)
          await waitFor(500)
          expect(output).toContain(WASM_COMPILE_ERROR)
          const warning = extractWarning(
            output,
            'DynamicWasmCodeGenerationWarning'
          )
          expect(warning).toMatchSnapshot(
            `wasm-compile-${title}-${isTurbopack ? 'turbopack' : 'webpack'}`
          )
        })

        it('shows a warning when running WebAssembly.instantiate with a buffer parameter', async () => {
          const res = await fetchViaHTTP(
            context.appPort,
            computeRoute('using-webassembly-instantiate-with-buffer')
          )
          expect(await extractValue(res)).toEqual(81)
          await waitFor(500)
          expect(output).toContain(WASM_INSTANTIATE_ERROR)
          const warning = extractWarning(
            output,
            'DynamicWasmCodeGenerationWarning'
          )
          expect(warning).toMatchSnapshot(
            `wasm-instantiate-${title}-${isTurbopack ? 'turbopack' : 'webpack'}`
          )
        })

        it('does not show a warning when running WebAssembly.instantiate with a module parameter', async () => {
          const res = await fetchViaHTTP(
            context.appPort,
            computeRoute('using-webassembly-instantiate')
          )
          expect(await extractValue(res)).toEqual(81)
          await waitFor(500)
          expect(output).not.toContain(WASM_INSTANTIATE_ERROR)
          expect(output).not.toContain('DynamicWasmCodeGenerationWarning')
        })
      }
    )
    ;(process.env.TURBOPACK_DEV ? describe.skip : describe)(
      'production mode',
      () => {
        let buildResult

        beforeAll(async () => {
          buildResult = await nextBuild(context.appDir, undefined, {
            stderr: true,
            stdout: true,
          })
        })

        it('should have middleware warning during build', () => {
          if (process.env.IS_TURBOPACK_TEST) {
            expect(buildResult.stderr).toContain(`Ecmascript file had an error`)
          } else {
            expect(buildResult.stderr).toContain(`Failed to compile`)
            expect(buildResult.stderr).toContain(
              `Used by usingEval, usingEvalSync`
            )
            expect(buildResult.stderr).toContain(
              `Used by usingWebAssemblyCompile`
            )
          }

          expect(buildResult.stderr).toContain(DYNAMIC_CODE_ERROR)
        })
      }
    )
  }
)
